[package]
name = "aoc_2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.20"
ndarray = "0.15.4"
regex = "1.5.4"
#chrono = "0.4.19"

[lib]
name = "libaoc"
test = false
bench = false

[[bin]]
name = "day01"
test = false
bench = false

[[bin]]
name = "day02"
test = false
bench = false

[[bin]]
name = "day03"
test = false
bench = false

[[bin]]
name = "day04"
test = false
bench = false

[[bin]]
name = "day05"
test = false
bench = false

[[bin]]
name = "day06"
test = false
bench = false