[package]
name = "aoc_2021"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3


[dependencies]
bitvec = "0.20"
ndarray = "0.15.4"
regex = "1.5.4"
#chrono = "0.4.19"
bimap = "0.6.1"

[lib]
name = "libaoc"
test = false
bench = false

[[bin]]
name = "day01"
test = false
bench = false

[[bin]]
name = "day02"
test = false
bench = false

[[bin]]
name = "day03"
test = false
bench = false

[[bin]]
name = "day04"
test = false
bench = false

[[bin]]
name = "day05"
test = false
bench = false

[[bin]]
name = "day06"
test = false
bench = false