[package]
name = "aoc_2021"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3


[dependencies]
bitvec = "0.20"
ndarray = "0.15.4"
regex = "1.5.4"
bimap = "0.6.1"
num = "0.4.0"
petgraph = "0.6.0"

[lib]
name = "libaoc"
test = false
bench = false

[[bin]]
name = "day01"
test = false
bench = false

[[bin]]
name = "day02"
test = false
bench = false

[[bin]]
name = "day03"
test = false
bench = false

[[bin]]
name = "day04"
test = false
bench = false

[[bin]]
name = "day05"
test = false
bench = false

[[bin]]
name = "day06"
test = false
bench = false

[[bin]]
name = "day07"
test = false
bench = false

[[bin]]
name = "day08"
test = false
bench = false

[[bin]]
name = "day09"
test = false
bench = false

[[bin]]
name = "day10"
test = false
bench = false

[[bin]]
name = "day11"
test = false
bench = false

[[bin]]
name = "day12"
test = false
bench = false

[[bin]]
name = "day13"
test = false
bench = false

[[bin]]
name = "day14"
test = false
bench = false

[[bin]]
name = "day15"
test = false
bench = false

[[bin]]
name = "day16"
test = false
bench = false

[[bin]]
name = "day17"
test = false
bench = false
